Revert static load and mess with FRICTION_K instead

--- a/ks_toyota_gt86_SSC/data/tyres.ini
+++ b/ks_toyota_gt86_SSC/data/tyres.ini
@@ -69,7 +69,7 @@ PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
 PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
 PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
 PRESSURE_IDEAL=31						; Ideal pressure for maximum grip in PSI (SSC real-world optimal)
-FZ0=3580								; Reference load in Newtons for DX_REF/DY_REF calculations (805 lbs actual front load)
+FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
 LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
 LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
 ;DX_REF=1.30
@@ -120,7 +120,7 @@ PRESSURE_FLEX_GAIN=0.4 					; Tire flex increase per PSI over reference pressure
 PRESSURE_RR_GAIN=0.55 					; Rolling resistance increase per PSI over reference pressure
 PRESSURE_D_GAIN=0.0045					; Loss of tire contact patch area per PSI pressure increase
 PRESSURE_IDEAL=29						; Ideal pressure for maximum grip in PSI (SSC real-world optimal)
-FZ0=2650								; Reference load in Newtons for DX_REF/DY_REF calculations (595 lbs actual rear load)
+FZ0=2494								; Reference load in Newtons for DX_REF/DY_REF calculations
 LS_EXPY=0.8119							; Load sensitivity exponent for lateral forces
 LS_EXPX=0.8791							; Load sensitivity exponent for longitudinal forces
 ;DX_REF=1.30
@@ -145,7 +145,7 @@ PATCH_TRANSFER=0.00027					; Heat transfer rate between different tire surface l
 CORE_TRANSFER=0.00025					; Heat transfer rate from tire surface to tire core/inner air (0-1 range)
 INTERNAL_CORE_TRANSFER=0.0038			; Heat transfer rate within the tire core structure
 ;FRICTION_K=0.07719						; Original friction heat generation coefficient
-FRICTION_K=0.11							; Coefficient for converting tire slip into heat energy
+FRICTION_K=0.12							; Coefficient for converting tire slip into heat energy (increased for front heat)
 ;ROLLING_K=0.22							; Original rolling resistance heat (higher temps)
 ;ROLLING_K=0.15							; Rolling resistance heat at ~50°C core temp
 ;ROLLING_K=0.10							; Rolling resistance heat at ~43°C core temp
@@ -169,7 +169,7 @@ PATCH_TRANSFER=0.00027					; Heat transfer rate between different tire surface l
 CORE_TRANSFER=0.00025					; Heat transfer rate from tire surface to tire core/inner air (0-1 range)
 INTERNAL_CORE_TRANSFER=0.0038			; Heat transfer rate within the tire core structure
 ;FRICTION_K=0.07719						; Original friction heat generation coefficient
-FRICTION_K=0.11							; Coefficient for converting tire slip into heat energy
+FRICTION_K=0.10							; Coefficient for converting tire slip into heat energy (reduced for rear heat)
 ;ROLLING_K=0.22							; Original rolling resistance heat (higher temps)
 ;ROLLING_K=0.15							; Rolling resistance heat at ~50°C core temp
 ;ROLLING_K=0.10							; Rolling resistance heat at ~43°C core temp
