Implement custom tire curve with realistic slip angle plateau behavior
  Replace AC's default exponential falloff model with research-based DY_CURVE
  that provides more realistic racing tire characteristics:

  - Add dy_curve_custom.lut with plateau region (5.5-8°) and progressive falloff
  - Disable FRICTION_LIMIT_ANGLE/FALLOFF_* parameters in favor of custom curve
  - Based on comprehensive tire research: OptimumG FSAE data, Paul Haney
    "Racing & High-Performance Tire", and MATLAB Pacejka model analysis
  - Maintains existing load sensitivity and thermal characteristics
  - Provides 83% grip retention at 10°, 71% at 12°, 61% at 15° (vs abrupt dropoff)

  Key improvements:
  - More controllable tire behavior at the limit
  - Realistic plateau region matching professional tire testing data
  - Progressive breakaway instead of sharp RT660-like characteristics
  - Better correlation with racing tire physics principles

  Testing tools and documentation added to /research/ directory.

--- a/ks_toyota_gt86_SSC/data/tyres.ini
+++ b/ks_toyota_gt86_SSC/data/tyres.ini
@@ -61,7 +61,7 @@ CAMBER_GAIN=0.136						; Camber influence on slip angle generation (default: 1.0
 DCAMBER_0=1.2							; Linear camber dependency coefficient for grip calculation
 DCAMBER_1=-13							; Quadratic camber dependency coefficient - D=D*(1.0-(camberRAD*DCAMBER_0+camberRAD²*DCAMBER_1))
 ;FRICTION_LIMIT_ANGLE=7.99				; Original slip angle at peak grip
-FRICTION_LIMIT_ANGLE=8.5					; Slip angle at peak grip in degrees
+;FRICTION_LIMIT_ANGLE=8.5					; Slip angle at peak grip in degrees - DISABLED (using DY_CURVE instead)
 XMU=0.27								; Base friction coefficient multiplier
 PRESSURE_STATIC=29.0 					; Static (cold) tire pressure in PSI
 PRESSURE_SPRING_GAIN=7874 				; Tire stiffness increase in N/m per PSI (from 26 PSI reference)
@@ -79,12 +79,13 @@ DY_REF=1.26 							; Lateral grip coefficient at reference load FZ0 - tuned for 
 FLEX_GAIN=0.0304						; Tire flex multiplier - affects slip angle generation
 ;FALLOFF_LEVEL=0.86						; Original falloff level
 ;FALLOFF_LEVEL=0.7 						; Lower values = more severe grip dropoff after peak
-FALLOFF_LEVEL=0.6						; Grip retention level after peak slip angle (lower = sharper dropoff)
+;FALLOFF_LEVEL=0.6						; Grip retention level after peak slip angle (lower = sharper dropoff) - DISABLED (using DY_CURVE)
 ;FALLOFF_SPEED=2						; Original falloff speed
-FALLOFF_SPEED=8						; Rate of grip falloff after peak (higher = faster dropoff)
+;FALLOFF_SPEED=8						; Rate of grip falloff after peak (higher = faster dropoff) - DISABLED (using DY_CURVE)
 CX_MULT=1.04							; Longitudinal force multiplier
 RADIUS_ANGULAR_K=0.01   				; Tire radius growth in MILLIMETERS per rad/s angular velocity
 BRAKE_DX_MOD=0.05						; Longitudinal grip modification during braking
+DY_CURVE=dy_curve_custom.lut			; Custom lateral force vs slip angle curve with realistic plateau behavior
 
 [REAR]
 NAME=Falken RT660						; Full tire name displayed in game
@@ -112,7 +113,7 @@ CAMBER_GAIN=0.136						; Camber influence on slip angle generation (default: 1.0
 DCAMBER_0=1.2							; Linear camber dependency coefficient for grip calculation
 DCAMBER_1=-13							; Quadratic camber dependency coefficient - D=D*(1.0-(camberRAD*DCAMBER_0+camberRAD²*DCAMBER_1))
 ;FRICTION_LIMIT_ANGLE=7.99				; Original slip angle at peak grip
-FRICTION_LIMIT_ANGLE=8.5					; Slip angle at peak grip in degrees
+;FRICTION_LIMIT_ANGLE=8.5					; Slip angle at peak grip in degrees - DISABLED (using DY_CURVE instead)
 XMU=0.27								; Base friction coefficient multiplier
 PRESSURE_STATIC=27 						; Static (cold) tire pressure in PSI
 PRESSURE_SPRING_GAIN=7874 				; Tire stiffness increase in N/m per PSI (from 26 PSI reference)
@@ -130,12 +131,13 @@ DY_REF=1.27 							; Lateral grip coefficient at reference load FZ0 - tuned for 
 FLEX_GAIN=0.0304						; Tire flex multiplier - affects slip angle generation
 ;FALLOFF_LEVEL=0.86						; Original falloff level
 ;FALLOFF_LEVEL=0.7 						; Lower values = more severe grip dropoff after peak
-FALLOFF_LEVEL=0.6						; Grip retention level after peak slip angle (lower = sharper dropoff)
+;FALLOFF_LEVEL=0.6						; Grip retention level after peak slip angle (lower = sharper dropoff) - DISABLED (using DY_CURVE)
 ;FALLOFF_SPEED=2						; Original falloff speed
-FALLOFF_SPEED=8						; Rate of grip falloff after peak (higher = faster dropoff)
+;FALLOFF_SPEED=8						; Rate of grip falloff after peak (higher = faster dropoff) - DISABLED (using DY_CURVE)
 CX_MULT=1.04							; Longitudinal force multiplier
 RADIUS_ANGULAR_K=0.01   				; Tire radius growth in MILLIMETERS per rad/s angular velocity
 BRAKE_DX_MOD=0.05						; Longitudinal grip modification during braking
+DY_CURVE=dy_curve_custom.lut			; Custom lateral force vs slip angle curve with realistic plateau behavior
 
 [THERMAL_FRONT]
 ;SURFACE_TRANSFER=0.0150				; Original surface heat transfer rate
